--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,6 @@
-# WhatsApp API Configuration
-GEMINI_VISION_MODEL="openrouter/quasar-alpha"
-
-# WhatsApp API Configuration for chat-wa.com
+AI_MODEL="openrouter/quasar-alpha"
 WHATSAPP_API_KEY="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 WHATSAPP_DEVICE_ID="xxxxxxxxxxxxxxxxxxxxxxxxx" 
-# From essential_details.txt
-WHATSAPP_BASE_URL="https://api.chat-wa.com" 
-# Assumed from essential_details.txt
-
-# OpenRouter Configuration
+WHATSAPP_BASE_URL="https://api.chat-wa.com"
 OPENROUTER_API_KEY="sk-or-v1-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-# Optional OpenRouter Headers (replace if needed)
-
-
-# Ngrok Configuration
 NGROK_AUTHTOKEN="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" 
-# Add your ngrok authtoken here
